RESOLVED FIXED278348
Fix handling of non-renderable inner rounded corners
https://bugs.webkit.org/show_bug.cgi?id=278348
Summary Fix handling of non-renderable inner rounded corners
Simon Fraser (smfr)
Reported 2024-08-19 14:31:17 PDT
117367@main added some code for non-renderable inner borders, but this is really a bug in RoundedRect::adjustRadii().
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-19 14:31:33 PDT
Simon Fraser (smfr)
Comment 2 2024-08-19 14:38:08 PDT
EWS
Comment 3 2024-08-20 10:36:59 PDT
Committed 282503@main (7a9185505356): <https://commits.webkit.org/282503@main> Reviewed commits have been landed. Closing PR #32420 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.