Fix handling of non-renderable inner rounded corners https://bugs.webkit.org/show_bug.cgi?id=278348 rdar://134291462

Reviewed by Alan Baradlay.

117367@main added some code for non-renderable inner borders, but this is really a bug in RoundedRect::adjustRadii(),
which used `int` for `maxRadiusWidth` and `maxRadiusHeight` which caused the adjustment to fail to make the rect
renderable for some rects (tested by fast/css/background-clip-radius-values.html).

After fixing that, I could not find any layout tests that entered `BackgroundPainter::clipRoundedInnerRect()`
with a non-renderable rect, but add a clause to fix up the rect if necessary.

* Source/WebCore/rendering/BackgroundPainter.cpp:
(WebCore::BackgroundPainter::paintFillLayer const):
(WebCore::BackgroundPainter::clipRoundedInnerRect):
* Source/WebCore/rendering/BackgroundPainter.h:
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::paint):
* Source/WebCore/rendering/RenderWidget.cpp:
(WebCore::RenderWidget::paint):

Canonical link: https://commits.webkit.org/282503@main